Fixes spacing issues on Hero component, adds effect to NFT image.

--- a/src/components/Hero/style.css
+++ b/src/components/Hero/style.css
@@ -2,6 +2,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 16px;
+}
+
+.hero_left {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  max-width: 600px;
 }
 
 .hero_left-launching {
@@ -16,6 +24,34 @@
   color: var(--color-white);
 }
 
+.hero .button {
+  align-self: baseline;
+  margin-top: 8px;
+  border-radius: 100px;
+}
+
+.hero_right-image-wrapper {
+  position: relative;
+}
+
+.hero_right-image-shadow {
+  position: absolute;
+  box-shadow: 0 0 100px 88px var(--color-pink);
+  left: 72px;
+  top: 100px;
+  z-index: -1;
+}
+
 .hero_right-image {
-  width: 200px;
+  width: 128px;
+}
+
+@media (min-width: 576px) {
+  .hero_right-image {
+    width: 200px;
+  }
+  .hero_right-image-shadow{
+    top: 150px;
+    left: 100px;
+  }
 }
